--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: #bd9a79;
+    background-color: #f2d9bb;
     color: #433120;
 }
 
@@ -105,6 +105,44 @@ body {
     min-height: 50px;
 }
 
+.modal-body {
+    background-color: #775036;
+}
+
+#color-picker {
+    margin-left: 5px;
+}
+
+.modal-content {
+    background-color: #433120;
+    color: #EAD0B2;
+    max-height: 600px;
+    min-height: 50vh;
+    overflow: auto;
+    position: relative;
+}
+
+.modal-header {
+    position: sticky;
+    top: 0;
+    z-index: 1050;
+    background-color: #433120;
+    color: #EAD0B2;
+    padding: 10px;
+}
+
+.modal-header,
+.modal-footer {
+    border-color: #443326;
+    padding: 0%;
+}
+
+.modal-title {
+    color: #F3C24A;
+    font-weight: bolder;
+    font-size: 30px;
+    margin-left: 10px;
+}
 
 .btn-primary {
     background-color: #F3C24A;
@@ -122,18 +160,29 @@ body {
         transform: scale(1);
     }
 
-    .mobileOnly {
+
+    .modal-content {
+        transform: scale(1) !important;
+    }
+
+    .mobileOnly{
         display: block;
     }
 }
 
 @media (max-width: 980px) {
-    .mobileOnly {
+    .mobileOnly{
         display: none;
     }
 
     .bottom-buttons-container .btn {
         transform: scale(1.5);
+    }
+
+    .modal-content {
+        max-height: 520px;
+        min-height: 520px;
+        transform: scale(1.5) !important;
     }
 
     .grid {
@@ -214,6 +263,23 @@ body {
     transform: translateX(-50%) !important;
 }
 
+.modal {
+    position: fixed !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    padding-right: 0 !important;
+}
+
+
+.modal-backdrop {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    background-color: rgba(0, 0, 0, 0.5) !important;
+}
 
 .form-control,
 .select {
@@ -250,6 +316,16 @@ body {
     padding: 8px;
     font-size: 16px;
     font-weight: bold;
+}
+
+.modal .btn {
+    background: none;
+    border: none;
+    color: #e0b044;
+}
+
+.modal .btn:hover {
+    color: #F3C24A;
 }
 
 .color-square {
@@ -340,141 +416,4 @@ body {
 .gridExpand .grid {
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(70, 1fr);
-}
-
-
-
-
-
-
-.modal-content {
-    background-color: rgb(119, 80, 54);
-}
-
-.modal-header {
-    background-color: rgb(119, 80, 54);
-    color: white;
-    text-align: center;
-    border-bottom: none;
-    padding: 5px;
-}
-
-.modal-body {
-    background-color: rgb(68, 51, 38);
-    padding: 0;
-    max-height: 53vh;
-    min-height: 45vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.modal-body::-webkit-scrollbar {
-    display: none;
-}
-
-.modal-footer {
-    border-top: none;
-    padding: 5px;
-}
-
-.modal {
-    position: fixed !important;
-    top: 50% !important;
-    left: 50% !important;
-    transform: translate(-50%, -50%) !important;
-    padding-right: 0 !important;
-}
-
-hr {
-    width: 100%;
-    border: 0;
-    border-top: 2px solid white;
-    margin: 2px 0 5px;
-}
-
-.player-flank {
-    background-color: rgb(145, 98, 65);
-    padding: 2px;
-    color: #fff;
-    font-weight: bold;
-    margin-top: 1px;
-}
-
-.modal .btn {
-    background: none;
-    border: none;
-    color: #e0b044;
-}
-
-.modal .btn:hover {
-    color: #F3C24A;
-}
-
-.box {
-    display: flex;
-    align-items: stretch;
-    border-radius: 30px;
-    margin-bottom: 10px;
-    text-decoration: none;
-    color: #000;
-    transition: box-shadow 0.3s ease, transform 0.3s ease;
-    border: 2px solid white;
-}
-
-.box:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.box-icon {
-    flex: 0 0 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-right: 2px solid white;
-    margin: 0;
-    background-color: rgb(145, 98, 65);
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-}
-
-.box-icon img {
-    max-width: 60px;
-    max-height: 60px;
-    transition: transform 0.3s ease;
-}
-
-.box-content {
-    flex: 1;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-    position: relative;
-    background-color: rgb(145, 98, 65);
-    min-height: 100px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-}
-
-.box-content h2 {
-    font-size: 18px;
-    margin: 0;
-    font-weight: bold;
-    color: white;
-}
-
-.box-content hr {
-    width: 100%;
-    border: 0;
-    border-top: 2px solid white;
-    margin: 2px 0 5px;
-}
-
-.box-content p {
-    margin: 0;
-    font-size: 14px;
-    color: white;
-}
-
-.row {
-    --bs-gutter-x: 0 !important;
 }
