--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: #f2d9bb;
+    background-color: #bd9a79;
     color: #433120;
 }
 
@@ -40,7 +40,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f2d9bb;
+    background-color: #bd9a79;
     padding: 0;
 }
 
@@ -107,6 +107,7 @@ body {
 
 .modal-body {
     background-color: #775036;
+    overflow: auto;
 }
 
 #color-picker {
@@ -118,7 +119,6 @@ body {
     color: #EAD0B2;
     max-height: 600px;
     min-height: 50vh;
-    overflow: auto;
     position: relative;
 }
 
@@ -165,13 +165,13 @@ body {
         transform: scale(1) !important;
     }
 
-    .mobileOnly{
+    .mobileOnly {
         display: block;
     }
 }
 
 @media (max-width: 980px) {
-    .mobileOnly{
+    .mobileOnly {
         display: none;
     }
 
@@ -416,4 +416,115 @@ body {
 .gridExpand .grid {
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(70, 1fr);
+}
+
+
+.buildingList {
+    min-height: 600px;
+}
+
+.box {
+    display: flex;
+    align-items: stretch;
+    border-radius: 30px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    color: #000;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+    border: 2px solid white;
+    cursor: pointer;
+}
+
+.box:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05);
+}
+
+.box-icon {
+    flex: 0 0 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 2px solid white;
+    margin: 0;
+    background-color: rgb(145, 98, 65);
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.box-icon img {
+    max-width: 60px;
+    max-height: 60px;
+    transition: transform 0.3s ease;
+}
+
+.box-content {
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+    position: relative;
+    background-color: rgb(145, 98, 65);
+    min-height: 100px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.box-content h2 {
+    font-size: 18px;
+    margin: 0;
+    font-weight: bold;
+    color: white;
+}
+
+.box-content hr {
+    width: 100%;
+    border: 0;
+    border-top: 2px solid white;
+    margin: 2px 0 5px;
+}
+
+.box-content p {
+    margin: 0;
+    font-size: 14px;
+    color: white;
+}
+
+.dropdown-menu {
+    background-color: #433120;
+}
+
+.dropdown-item {
+    color: #e0b044;
+}
+
+.modal-header .d-flex {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+}
+
+.modal-header .dropdown {
+    margin-right: 10px;
+}
+
+.modal-header .btn {
+    margin-left: 5px;
+}
+
+
+.modal-header .d-flex {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+}
+
+.modal-header .dropdown {
+    margin-right: 10px;
+}
+
+.modal-header .btn {
+    margin-left: 5px;
 }
