--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -528,3 +528,36 @@ body {
 .modal-header .btn {
     margin-left: 5px;
 }
+
+
+.home-icon-link {
+    position: fixed;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    z-index: 1000;
+    text-decoration: none;
+  }
+  
+  .home-icon {
+    background-color: #f8f9fa;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .home-icon i {
+    color: #333;
+  }
+  
+  .home-icon-link:hover .home-icon i {
+    color: #007bff;
+  }
+  
