--- a/battle_simulator/styles.css
+++ b/battle_simulator/styles.css
@@ -530,18 +530,6 @@ body {
     ;
 }
 
-.btn-confirm {
-    background-color: green;
-    color: white;
-    border: none;
-}
-
-.btn-confirm:hover {
-    background-color: green;
-    color: white;
-    border: none;
-}
-
 .modal-title {
     font-weight: bolder;
 }
@@ -845,3 +833,39 @@ input[type="number"] {
 .report-wave{
     min-height: 50px;
 }
+
+.btn-confirm {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 8px 16px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .btn-confirm:hover {
+    background-color: #218838;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+    transform: scale(1.025);
+  }
+  
+  .btn-confirm:active {
+    background-color: #1e7e34;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transform: scale(0.98);
+  }
+  
+  .btn-confirm .icon {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 20px;
+  }
+  
