--- a/hol_simualtor/styles.css
+++ b/hol_simualtor/styles.css
@@ -14,8 +14,6 @@ body {
     max-width: 450px;
     min-height: 100vh;
     margin: auto;
-    border-left: 1px solid #7e4606;
-    border-right: 1px solid #7e4606;
     user-select: none;
 }
 
@@ -30,6 +28,11 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+}
+
+.row{
+    margin-top: 0 !important;
+    margin-right: 0 !important;
 }
 
 .slot.maxed {
@@ -125,15 +128,10 @@ body {
 }
 
 .details {
-    min-width: 25%;
-    font-weight: bolder;
-}
-
-.details {
     background-color: #775036;
-    padding: 40px;
+    padding: 20px;
     color: #fff;
-    font-weight: bold;
+    font-weight: bolder;
     border-radius: 3px;
 }
 
