--- a/hol_simulator/styles.css
+++ b/hol_simulator/styles.css
@@ -129,10 +129,14 @@ body {
 
 .details {
     background-color: #775036;
-    padding: 10px;
+    padding: 0px;
     color: #fff;
     font-weight: bolder;
     border-radius: 3px;
+}
+
+#details-text{
+    margin-left: 1%;
 }
 
 .details2 {
@@ -213,6 +217,50 @@ body {
 .slot.selected {
     transform: scale(1.1);
     z-index: 3;
+}
+
+#reset-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    height: 100%;
+    width: auto;
+}
+
+#reset-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #775036;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    background-color: rgb(88, 117, 114);
+    border: 1px solid rgb(58, 77, 75);
+}
+
+#reset-button i {
+    font-size: 1.4rem;
+    color: #f8bc00;
+}
+
+#reset-button:hover {
+    background-color: rgb(101, 132, 141);
+    border-radius: 10%;
+}
+
+.total-points-display {
+    background-color: #775036;
+    padding: 0px;
+    color: #fff;
+    font-weight: bolder;
+    border-radius: 3px;
+    margin-top: 2px;
 }
 
 /* Home button */
