--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -183,6 +183,7 @@ body {
 
     .bottom-buttons-container .btn {
         transform: scale(1.5);
+        max-width: 100px;
     }
 
     .modal-content {
