--- a/decorations/styles.css
+++ b/decorations/styles.css
@@ -312,3 +312,21 @@ p {
 .image-modal.show #modalCaption {
     opacity: 1;
 }
+
+.card-table {
+    width: 100%;
+    color: white;
+    font-size: 14px;
+    text-align: center;
+}
+
+.card-cell {
+    padding: 2px 0;
+}
+
+.card-section-title {
+  text-align: left;
+  font-size: 15px;
+  font-weight: bold;
+  color: white;
+}
