--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ h1 {
     display: flex;
     align-items: stretch;
     border-radius: 30px;
-    margin-bottom: 10px;
+    margin: 5px;
     text-decoration: none;
     color: #000;
     transition: box-shadow 0.3s ease, transform 0.3s ease;
@@ -67,7 +67,7 @@ h1 {
 
 .box:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 .box-icon {
@@ -145,6 +145,10 @@ p {
     }
 }
 
+.row {
+  --bs-gutter-x: 0rem;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
     background-color: #f2d9bb;
@@ -164,4 +168,48 @@ p {
     pointer-events: none;
     cursor: not-allowed;
     transition: all 0.3s ease;
+}
+
+#page-header {
+    position: sticky;
+    top: 0;
+    background-color: rgb(119, 80, 54);
+    z-index: 1000;
+    padding: 4px;
+    border-radius: 0 0 10px 10px;
+}
+
+/* Home button */
+.home-icon-link {
+  position: fixed;
+  right: 10px;
+  top: 95%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  z-index: 1000;
+  text-decoration: none;
+  opacity: 0.8;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.home-icon {
+  background-color: #7e4606;
+  border: 1px solid #f8bc00;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.home-icon i {
+  color: #4c473b;
+  font-size: 18px;
+}
+
+.home-icon-link .home-icon i {
+  color: #f8bc00;
 }
