--- a/decorations/styles.css
+++ b/decorations/styles.css
@@ -75,7 +75,7 @@ h1 {
     flex: 1;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px;
+    padding: 0px;
     position: relative;
     background-color: rgb(145, 98, 65);
     min-height: 100px;
@@ -94,6 +94,7 @@ h1 {
     width: 100%;
     border: 0;
     border-top: 2px solid white;
+    opacity: 0.5;
     margin: 2px 0 5px;
 }
 
@@ -326,39 +327,38 @@ p {
     }
 }
 
-/* Home button */
 .home-icon-link {
-  position: fixed;
-  right: 10px;
-  top: 95%;
-  transform: translateY(-50%);
-  width: 50px;
-  height: 50px;
-  z-index: 1000;
-  text-decoration: none;
-  opacity: 0.8;
-  transition: opacity 0.3s ease-in-out;
+    position: fixed;
+    right: 10px;
+    top: 95%;
+    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    z-index: 1000;
+    text-decoration: none;
+    opacity: 0.8;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .home-icon {
-  background-color: #7e4606;
-  border: 1px solid #f8bc00;
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #7e4606;
+    border: 1px solid #f8bc00;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .home-icon i {
-  color: #4c473b;
-  font-size: 18px;
+    color: #4c473b;
+    font-size: 18px;
 }
 
 .home-icon-link .home-icon i {
-  color: #f8bc00;
+    color: #f8bc00;
 }
 
 #content {
@@ -373,7 +373,55 @@ p {
     #content {
         height: 74vh;
     }
+
     .page-title {
         display: none;
     }
+}
+
+.card-effects {
+    padding: 5px;
+}
+
+.card-sources {
+    padding: 5px;
+}
+
+.box-content hr {
+    margin-top: 0;
+    margin-bottom: 0;
+    color: white;
+}
+
+.deco-title {
+    padding: 5px;
+}
+
+.error-message {
+    background-color: #f8d7da;
+    color: #842029;
+    border: 1px solid #f5c2c7;
+    border-radius: 8px;
+    padding: 10px;
+    max-width: 600px;
+    margin: 20px auto;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.error-message h3 {
+    margin-top: 0;
+    font-weight: bold;
+}
+
+.error-message a {
+    color: #842029;
+    text-decoration: underline;
+}
+
+#errorCountdown {
+    font-weight: bold;
+    font-size: 24px;
+    margin-top: 10px;
 }
