--- a/building_items/styles.css
+++ b/building_items/styles.css
@@ -75,7 +75,7 @@ h1 {
     flex: 1;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px;
+    padding: 0;
     position: relative;
     background-color: rgb(145, 98, 65);
     min-height: 100px;
@@ -94,7 +94,9 @@ h1 {
     width: 100%;
     border: 0;
     border-top: 2px solid white;
-    margin: 2px 0 5px;
+    opacity: 0.5;
+    margin: 0;
+    color: white;
 }
 
 .box-content p {
@@ -326,7 +328,6 @@ p {
     }
 }
 
-/* Home button */
 .home-icon-link {
     position: fixed;
     right: 10px;
@@ -361,64 +362,6 @@ p {
     color: #f8bc00;
 }
 
-.level-selector {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #7b5a3b;
-    padding: 6px 12px;
-    border-radius: 8px;
-    border: 2px solid #f3c24a;
-    color: #f3c24a;
-    font-weight: bold;
-    user-select: none;
-    margin-bottom: 12px;
-    font-size: 1rem;
-    box-shadow: 0 0 5px rgba(243, 194, 74, 0.7);
-}
-
-.level-selector button {
-    background-color: #f3c24a;
-    border: 2px solid #bd9a79;
-    color: #433120;
-    font-weight: bold;
-    padding: 4px 10px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    min-width: 40px;
-    user-select: none;
-}
-
-.level-selector button:disabled {
-    background-color: #bd9a79;
-    border-color: #7b5a3b;
-    color: #433120;
-    cursor: default;
-    opacity: 0.6;
-    box-shadow: none;
-}
-
-.level-selector button:hover:not(:disabled) {
-    background-color: #e2b33d;
-    border-color: #f3c24a;
-}
-
-.level-selector .level-text {
-    flex-grow: 1;
-    text-align: center;
-}
-
-.no-image-text {
-    font-style: italic;
-    color: #e2b33d;
-    text-align: center;
-    padding: 2rem;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    user-select: none;
-}
-
 #content {
     height: 84vh;
     display: flex;
@@ -431,7 +374,49 @@ p {
     #content {
         height: 74vh;
     }
+
     .page-title {
         display: none;
     }
+}
+
+.card-effects {
+    padding: 5px;
+}
+
+.card-sources {
+    padding: 5px;
+}
+
+.deco-title {
+    padding: 5px;
+}
+
+.error-message {
+    background-color: #f8d7da;
+    color: #842029;
+    border: 1px solid #f5c2c7;
+    border-radius: 8px;
+    padding: 10px;
+    max-width: 600px;
+    margin: 20px auto;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.error-message h3 {
+    margin-top: 0;
+    font-weight: bold;
+}
+
+.error-message a {
+    color: #842029;
+    text-decoration: underline;
+}
+
+#errorCountdown {
+    font-weight: bold;
+    font-size: 24px;
+    margin-top: 10px;
 }
