--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -24,7 +24,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: #bd9a79;
+    background-color: rgb(155, 180, 76);
     color: #433120;
 }
 
@@ -32,13 +32,15 @@ body {
     position: relative;
     width: calc(60 * 14.4px);
     height: calc(60 * 14.4px);
-    border: 1px solid;
+    border: none;
+    box-shadow: 0 0 0 2px #000;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #bd9a79;
+    background-color: rgba(0, 0, 0, 0.2);
     padding: 0;
+    margin-top: 3vh;
 }
 
 .container::-webkit-scrollbar {
@@ -63,7 +65,7 @@ body {
     width: 14.4px;
     height: 14.4px;
     box-sizing: border-box;
-    border: 1px solid;
+    border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 
@@ -72,14 +74,15 @@ body {
     position: absolute;
     user-select: none;
     z-index: 1;
-    border: 1px solid black;
-    color: white;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.8);
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size: 14px;
-    text-shadow: 2px 2px 4px black;
+    font-size: 13px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    font-weight: bolder;
 }
 
 .building div {
@@ -88,7 +91,7 @@ body {
 }
 
 .transparent-mode .building {
-    opacity: 0.5;
+    opacity: 0.75;
 }
 
 
