--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -24,7 +24,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: rgb(155, 180, 76);
+    background-color: #bd9a79;
     color: #433120;
 }
 
@@ -38,7 +38,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.15);
     padding: 0;
     margin-top: 3vh;
 }
