--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -575,6 +575,7 @@ button.disabled {
     .building {
         position: absolute;
         touch-action: none;
+        font-size: 14px;
     }
 
     .bottom-buttons-container {
