--- a/layout_editor/styles.css
+++ b/layout_editor/styles.css
@@ -261,13 +261,16 @@ body {
 
 .dropdown-menu-custom {
     background-color: #f3e0c2;
-    max-height: 300px;
+    max-height: 350px;
     overflow-y: auto;
     border: 2px solid #a97c50;
-    padding: 10px;
+    padding: 5px;
     border-radius: 8px;
-    min-width: 200px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+}
+
+.dropdown-menu .form-check:hover {
+  background-color: rgba(243, 194, 74, 0.25);
 }
 
 .dropdown-menu-custom li {
@@ -276,7 +279,6 @@ body {
 
 .form-check {
     margin-bottom: 0px;
-    padding-bottom: 5px;
 }
 
 .dropdown-menu-custom .form-check-input {
@@ -292,10 +294,6 @@ body {
 .dropdown-menu-custom .form-check-label {
     color: #433120;
     font-weight: bold;
-}
-
-.dropdown-menu-custom {
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 .btn.dropdown-toggle::after {
@@ -324,7 +322,6 @@ body {
     color: #F3C24A;
     border-color: #F3C24A;
 }
-
 
 .form-group {
     margin-top: 15px;
@@ -373,6 +370,14 @@ body {
 #presetSizes option {
     padding: 8px;
     font-size: 16px;
+    font-weight: bold;
+}
+
+.form-select,
+.form-select option {
+    background-color: #f2d9bb;
+    color: #433120;
+    border: 2px solid #a97c50;
     font-weight: bold;
 }
 
