--- a/building_items/styles.css
+++ b/building_items/styles.css
@@ -124,7 +124,9 @@ p {
 
 .custom-input,
 .custom-select,
-.custom-button {
+.custom-button,
+.form-control:focus,
+.form-control:disabled {
     background-color: #f3e0c2;
     color: #3e2a16;
     border: 2px solid #bd9a79;
@@ -148,7 +150,6 @@ p {
     background-color: #f3c24a;
     color: #433120;
     text-align: center;
-    font-weight: bold;
     padding: 6px 12px;
     transition: background-color 0.3s ease;
 }
@@ -169,17 +170,17 @@ p {
     margin-bottom: 5px;
 }
 
-#searchInput,
-#sortSelect,
+#searchInput::placeholder {
+    color: #7b5a3b;
+}
+
+.form-select,
+.form-select option,
 .btn-custom {
     background-color: #f2d9bb;
     color: #433120;
     border: 2px solid #a97c50;
     font-weight: bold;
-}
-
-#searchInput::placeholder {
-    color: #7b5a3b;
 }
 
 #searchInput:focus,
@@ -191,14 +192,13 @@ p {
 }
 
 .dropdown-menu-custom {
-  background-color: #f3e0c2;
-  max-height: 300px;
-  overflow-y: auto;
-  border: 2px solid #a97c50;
-  padding: 10px;
-  border-radius: 8px;
-  min-width: 200px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    background-color: #f3e0c2;
+    max-height: 350px;
+    overflow-y: auto;
+    border: 2px solid #a97c50;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 .form-check-input {
@@ -476,30 +476,39 @@ p {
 }
 
 .dropdown-menu-custom li {
-  list-style: none;
-  margin-bottom: 5px;
+    list-style: none;
+    margin-bottom: 5px;
+}
+
+.dropdown-menu-custom li,
+.form-check {
+    margin-bottom: 0px !important;
 }
 
 .dropdown-menu-custom .form-check-input {
-  border: 2px solid #a97c50;
-  background-color: white;
+    border: 2px solid #a97c50;
+    background-color: white;
 }
 
 .dropdown-menu-custom .form-check-input:checked {
-  background-color: #f3c24a;
-  border-color: #f3c24a;
+    background-color: #f3c24a;
+    border-color: #f3c24a;
 }
 
 .dropdown-menu-custom .form-check-label {
-  color: #433120;
-  font-weight: bold;
+    color: #433120;
+    font-weight: bold;
 }
 
 .btn.dropdown-toggle::after {
-  display: none !important;
+    display: none !important;
 }
 
 .custom-button .bi-funnel {
-  font-weight: bolder;
-  color: #433120;
+    font-weight: bolder;
+    color: #433120;
+}
+
+.dropdown-menu .form-check:hover {
+    background-color: rgba(243, 194, 74, 0.25);
 }
